# Jafftune

./: .gitignore  CMakeLists.txt  Jafftune.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
